edit, delete my courses

--- a/BigSchool_Khanh2/Content/Site.css
+++ b/BigSchool_Khanh2/Content/Site.css
@@ -75,3 +75,13 @@ textarea {
         left: 70px;
     }
 
+    .course > li .action {
+        display: none;
+        position: absolute;
+        left: 70px;
+    }
+
+    .course > li:hover .action {
+        display: block;
+    }
+
