--- a/BigSchool_Khanh2/Views/Shared/_LoginPartial.cshtml
+++ b/BigSchool_Khanh2/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,8 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
                    aria-expanded="False">@User.Identity.GetUserName() <span class="caret"></span></a>
                 <ul class="dropdown-menu">
-                    <li><a href="@Url.Action("Attending","Courses")">Courses I'm Going</a></li>
+                    <li><a href="@Url.Action("Mine", "Courses")">My upcomming courses</a></li>
+                    <li><a href="@Url.Action("Attending", "Courses")">Courses I'm Going</a></li>
                     <li><a href="@Url.Action("Following", "Account")">Courses I'm Following</a></li>
                     <li role="separator" class="divider"></li>
                     <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
